--- a/index.html
+++ b/index.html
@@ -6,54 +6,101 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Top-Scrolling Flying Game</title>
   <style>
+    body {
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      font-family: Arial, sans-serif;
+    }
+
+    #container {
+      position: relative;
+      width: 800px;
+      margin: 0 auto;
+    }
+
     canvas {
       border: 1px solid black;
       display: block;
-      margin: 0 auto;
-      background-color: black;
+      background-color: rgb(0, 0, 0);
+    }
+
+    #startButton {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      padding: 10px 20px;
+      font-size: 16px;
+      z-index: 2;
+      cursor: pointer;
+    }
+
+    #intro {
+      color: white;
+      position: absolute;
+      top: 10px;
+      left: 30%;
+      font-size: 18px;
+      z-index: 2;
+
+    }
+
+    #score {
+      color: white;
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      font-size: 18px;
+      z-index: 2;
+    }
+
+    #gameOver {
+      display: none;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 36px;
+      color: red;
+      z-index: 2;
     }
   </style>
 </head>
 
 <body>
-  <canvas id="gameCanvas" width="800" height="600"></canvas>
-  <div id="score">Score: 0</div>
-  <div id="gameOver" style="display: none">Game Over!</div>
-  <button id="startButton">Start Game</button>
+  <div id="container">
+
+    <button id="startButton">Start Game</button>
+    <div id="intro">Use Left/Right Arrows and Shoot=Spacebar</div>
+    <div id="score">Score: 0</div>
+    <canvas id="gameCanvas" width="800" height="600"></canvas>
+    <div id="gameOver">Game Over!</div>
+  </div>
+
   <script>
-    // Get the canvas element
+    // Your existing JavaScript code remains the same
     var canvas = document.getElementById("gameCanvas");
     var ctx = canvas.getContext("2d");
 
-    // Load player image
     var playerImg = new Image();
     playerImg.src = "/Xenon_2/player.png";
 
-    // Load enemy image
     var enemyImg = new Image();
     enemyImg.src = "/Xenon_2/enemy.png";
 
-    // Player object
     var player = {
       x: canvas.width / 2,
-      y: canvas.height - 30,
-      width: 50,
-      height: 50,
+      y: canvas.height - 80,
+      width: 75,
+      height: 75,
       speed: 5,
     };
 
-    // Bullets arrays
     var playerBullets = [];
     var enemyBullets = [];
-
-    // Enemy objects
     var enemies = [];
-
-    // Score
     var score = 0;
-
-    // Game over flag
-    var gameOver = true; // Set to true initially
+    var gameOver = true;
 
     function createEnemy() {
       var enemy = {
@@ -61,12 +108,11 @@
         y: 0,
         width: 50,
         height: 50,
-        speed: Math.random() * 2 + 2, // Random speed between 2 and 4
+        speed: Math.random() * 2 + 2,
       };
       enemies.push(enemy);
     }
 
-    // Keyboard event listeners
     var rightPressed = false;
     var leftPressed = false;
 
@@ -79,7 +125,6 @@
       } else if (e.key == "Left" || e.key == "ArrowLeft") {
         leftPressed = true;
       } else if (e.key == " ") {
-        // Use " " for space key
         shootBullet();
       }
     }
@@ -92,10 +137,9 @@
       }
     }
 
-    // Shoot player bullet
     function shootBullet() {
       var bullet = {
-        x: player.x + player.width / 2 - 2.5, // Bullet starts from the middle of the player
+        x: player.x + player.width / 2 - 2.5,
         y: player.y,
         width: 5,
         height: 10,
@@ -104,152 +148,108 @@
       playerBullets.push(bullet);
     }
 
-    // Shoot enemy bullet
     function shootEnemyBullet(enemy) {
       var bullet = {
-        x: enemy.x + enemy.width / 2 - 2.5, // Bullet starts from the middle of the enemy
+        x: enemy.x + enemy.width / 2 - 2.5,
         y: enemy.y + enemy.height,
         width: 5,
         height: 10,
-        speed: 4, // Adjust speed as needed
+        speed: 4,
       };
       enemyBullets.push(bullet);
     }
 
-    // Main game loop
     function draw() {
       if (!gameOver) {
         ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-        // Draw player
-        ctx.drawImage(
-          playerImg,
-          player.x,
-          player.y,
-          player.width,
-          player.height
-        );
+        ctx.drawImage(playerImg, player.x, player.y, player.width, player.height);
 
-        // Move player
         if (rightPressed && player.x < canvas.width - player.width) {
           player.x += player.speed;
         } else if (leftPressed && player.x > 0) {
           player.x -= player.speed;
         }
 
-        // Draw and move player bullets
         for (var i = 0; i < playerBullets.length; i++) {
           ctx.fillStyle = "#00FF00";
-          ctx.fillRect(
-            playerBullets[i].x,
-            playerBullets[i].y,
-            playerBullets[i].width,
-            playerBullets[i].height
-          );
+          ctx.fillRect(playerBullets[i].x, playerBullets[i].y, playerBullets[i].width, playerBullets[i].height);
 
           playerBullets[i].y -= playerBullets[i].speed;
 
-          // Remove bullets that have reached the top of the screen
           if (playerBullets[i].y < 0) {
             playerBullets.splice(i, 1);
             continue;
           }
 
-          // Check for collisions with enemies
           for (var j = 0; j < enemies.length; j++) {
             if (
+              playerBullets[i] &&
               playerBullets[i].x < enemies[j].x + enemies[j].width &&
               playerBullets[i].x + playerBullets[i].width > enemies[j].x &&
               playerBullets[i].y < enemies[j].y + enemies[j].height &&
               playerBullets[i].y + playerBullets[i].height > enemies[j].y
             ) {
-              // Collision detected, remove bullet and enemy
               playerBullets.splice(i, 1);
               enemies.splice(j, 1);
-              // Decrement i to handle the removed bullet
               i--;
-              // Increment score
               score += 10;
               document.getElementById("score").innerText = "Score: " + score;
-              break; // Exit the inner loop since the bullet can only collide with one enemy
+              break;
             }
           }
         }
 
-        // Draw and move enemy bullets
         for (var i = 0; i < enemyBullets.length; i++) {
           ctx.fillStyle = "#FF0000";
-          ctx.fillRect(
-            enemyBullets[i].x,
-            enemyBullets[i].y,
-            enemyBullets[i].width,
-            enemyBullets[i].height
-          );
+          ctx.fillRect(enemyBullets[i].x, enemyBullets[i].y, enemyBullets[i].width, enemyBullets[i].height);
 
           enemyBullets[i].y += enemyBullets[i].speed;
 
-          // Remove bullets that have reached the bottom of the screen
           if (enemyBullets[i].y > canvas.height) {
             enemyBullets.splice(i, 1);
             continue;
           }
 
-          // Check for collisions with player
           if (
             enemyBullets[i].x < player.x + player.width &&
             enemyBullets[i].x + enemyBullets[i].width > player.x &&
             enemyBullets[i].y < player.y + player.height &&
             enemyBullets[i].y + enemyBullets[i].height > player.y
           ) {
-            // Collision detected with player, game over
             gameOver = true;
             document.getElementById("gameOver").style.display = "block";
             break;
           }
         }
 
-        // Draw and move enemies
         for (var i = 0; i < enemies.length; i++) {
-          ctx.drawImage(
-            enemyImg,
-            enemies[i].x,
-            enemies[i].y,
-            enemies[i].width,
-            enemies[i].height
-          );
+          ctx.drawImage(enemyImg, enemies[i].x, enemies[i].y, enemies[i].width, enemies[i].height);
 
           enemies[i].y += enemies[i].speed;
 
-          // Check for collision with player
           if (
             player.x < enemies[i].x + enemies[i].width &&
             player.x + player.width > enemies[i].x &&
             player.y < enemies[i].y + enemies[i].height &&
             player.y + player.height > enemies[i].y
           ) {
-            // Collision detected with player, game over
             gameOver = true;
             document.getElementById("gameOver").style.display = "block";
             break;
           }
 
-          // Remove enemies that have reached the bottom of the screen
           if (enemies[i].y > canvas.height) {
             enemies.splice(i, 1);
-            // Decrement i to handle the removed enemy
             i--;
-            // End the game if an enemy reaches the bottom
             endGame();
           }
 
-          // Randomly shoot bullets from enemies
           if (Math.random() < 0.005) {
-            // Adjust the frequency of enemy shooting
             shootEnemyBullet(enemies[i]);
           }
         }
 
-        // Create new enemies randomly
         if (Math.random() < 0.01) {
           createEnemy();
         }
@@ -263,24 +263,19 @@
       document.getElementById("gameOver").style.display = "block";
     }
 
-    // Event listener for the start button
-    document
-      .getElementById("startButton")
-      .addEventListener("click", function () {
-        if (gameOver) {
-          // Reset game state
-          gameOver = false;
-          score = 0;
-          document.getElementById("score").innerText = "Score: " + score;
-          player.x = canvas.width / 2;
-          enemies = [];
-          playerBullets = [];
-          enemyBullets = [];
-          document.getElementById("gameOver").style.display = "none";
-          // Start the game loop
-          draw();
-        }
-      });
+    document.getElementById("startButton").addEventListener("click", function () {
+      if (gameOver) {
+        gameOver = false;
+        score = 0;
+        document.getElementById("score").innerText = "Score: " + score;
+        player.x = canvas.width / 2;
+        enemies = [];
+        playerBullets = [];
+        enemyBullets = [];
+        document.getElementById("gameOver").style.display = "none";
+        draw();
+      }
+    });
   </script>
 </body>
 
