Updated the instructions

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <div id="container">
 
     <button id="startButton">Start Game</button>
-    <div id="intro">Use Left/Right Arrows and Shoot=Spacebar</div>
+    <div id="intro">Use Left/Right Arrows and Spacebar to Shoot</div>
     <div id="score">Score: 0</div>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
     <div id="gameOver">Game Over!</div>
