--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
       position: absolute;
       top: 50%;
       left: 50%;
-      transform: translate(-50%, -50%);
-      font-size: 36px;
+      transform: translate(-50%, -40%);
+      font-size: 28px;
       color: red;
       z-index: 2;
     }
@@ -75,7 +75,8 @@
     <div id="score">Score: 0</div>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
     <div id="level" style="font-size: 24px; color: white; margin-bottom: 10px;">Level 1</div>
-    <div id="gameOver">Game Over!</div>
+    <div id="gameOver">Game Over! Good luck LOSER!
+    </div>
   </div>
 
   <script>
