--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div id="score">Score: 0</div>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
     <div id="level" style="font-size: 24px; color: white; margin-bottom: 10px;">Level 1</div>
-    <div id="gameOver">Game Over! Good luck LOSER!
+    <div id="gameOver">Game Over! Good Luck LOSER!
     </div>
   </div>
 
