--- a/index.html
+++ b/index.html
@@ -981,61 +981,73 @@
     };
 
     // Level definitions with 2 waves each
-    // Shapes flow into each other via rotation (marching band style)
+    // Each level uses ONE enemy type for the whole formation (like the original game)
+    // Kamikazes: enemies that break off from formation and dive at player
+    // Fillers only spawn after 4 morphs to let player enjoy the formations
     var LEVEL_WAVES = {
       1: {
+        enemyType: 'enemy1',
         waves: [
-          { count: 6, shapes: ['lineH', 'veeDown', 'lineH'], enemyTypes: ['enemy1'] },
-          { count: 8, shapes: ['circle', 'oval', 'circle'], enemyTypes: ['enemy1'] }
+          { count: 8, kamikazes: 2, shapes: ['lineH', 'veeDown', 'lineH', 'veeUp', 'lineH'] },
+          { count: 10, kamikazes: 3, shapes: ['circle', 'oval', 'circle', 'oval', 'circle'] }
         ]
       },
       2: {
+        enemyType: 'enemy2',
         waves: [
-          { count: 8, shapes: ['veeDown', 'lineH', 'veeUp'], enemyTypes: ['enemy1', 'enemy2'] },
-          { count: 8, shapes: ['square', 'diamond', 'square'], enemyTypes: ['enemy1', 'enemy2'] }
+          { count: 10, kamikazes: 2, shapes: ['veeDown', 'lineH', 'veeUp', 'lineH', 'veeDown'] },
+          { count: 10, kamikazes: 3, shapes: ['square', 'diamond', 'square', 'diamond', 'square'] }
         ]
       },
       3: {
+        enemyType: 'enemy3',
         waves: [
-          { count: 8, shapes: ['circle', 'square', 'diamond', 'circle'], enemyTypes: ['enemy1', 'enemy2', 'enemy3'] },
-          { count: 10, shapes: ['twoLines', 'lineH', 'arc', 'twoLines'], enemyTypes: ['enemy1', 'enemy2', 'enemy3'] }
+          { count: 10, kamikazes: 3, shapes: ['circle', 'square', 'diamond', 'circle', 'square'] },
+          { count: 12, kamikazes: 3, shapes: ['twoLines', 'lineH', 'arc', 'lineH', 'twoLines'] }
         ]
       },
       4: {
+        enemyType: 'enemy4',
         waves: [
-          { count: 10, shapes: ['diamond', 'square', 'lineH', 'veeDown', 'diamond'], enemyTypes: ['enemy1', 'enemy2', 'enemy3', 'enemy4'] },
-          { count: 12, shapes: ['circle', 'oval', 'lineH', 'oval', 'circle'], enemyTypes: ['enemy1', 'enemy2', 'enemy3', 'enemy4'] }
+          { count: 12, kamikazes: 3, shapes: ['diamond', 'square', 'lineH', 'veeDown', 'diamond'] },
+          { count: 14, kamikazes: 4, shapes: ['circle', 'oval', 'lineH', 'oval', 'circle'] }
         ]
       },
       5: {
+        enemyType: 'enemy1_red',
         waves: [
-          { count: 8, shapes: ['lineH', 'arc', 'lineH'], enemyTypes: ['enemy1_red'] },
-          { count: 8, shapes: ['veeUp', 'lineH', 'veeDown'], enemyTypes: ['enemy1_red'] }
+          { count: 10, kamikazes: 2, shapes: ['lineH', 'arc', 'lineH', 'arc', 'lineH'] },
+          { count: 10, kamikazes: 3, shapes: ['veeUp', 'lineH', 'veeDown', 'lineH', 'veeUp'] }
         ]
       },
       6: {
+        enemyType: 'enemy2_red',
         waves: [
-          { count: 8, shapes: ['circle', 'diamond', 'circle'], enemyTypes: ['enemy1_red', 'enemy2_red'] },
-          { count: 10, shapes: ['square', 'lineH', 'twoLines', 'square'], enemyTypes: ['enemy1_red', 'enemy2_red'] }
+          { count: 10, kamikazes: 3, shapes: ['circle', 'diamond', 'circle', 'diamond', 'circle'] },
+          { count: 12, kamikazes: 3, shapes: ['square', 'lineH', 'twoLines', 'lineH', 'square'] }
         ]
       },
       7: {
+        enemyType: 'enemy3_red',
         waves: [
-          { count: 10, shapes: ['arrowRight', 'lineH', 'veeDown', 'arrowRight'], enemyTypes: ['enemy1_red', 'enemy2_red', 'enemy3_red'] },
-          { count: 12, shapes: ['diamond', 'oval', 'diamond', 'square'], enemyTypes: ['enemy1_red', 'enemy2_red', 'enemy3_red'] }
+          { count: 12, kamikazes: 3, shapes: ['arrowRight', 'lineH', 'veeDown', 'lineH', 'arrowRight'] },
+          { count: 14, kamikazes: 4, shapes: ['diamond', 'oval', 'diamond', 'square', 'diamond'] }
         ]
       },
       8: {
+        enemyType: 'enemy4_red',
         waves: [
-          { count: 12, shapes: ['circle', 'square', 'diamond', 'lineH', 'circle'], enemyTypes: ['enemy1_red', 'enemy2_red', 'enemy3_red', 'enemy4_red'] },
-          { count: 12, shapes: ['twoLines', 'veeDown', 'lineV', 'veeUp', 'twoLines'], enemyTypes: ['enemy1_red', 'enemy2_red', 'enemy3_red', 'enemy4_red'] }
+          { count: 14, kamikazes: 4, shapes: ['circle', 'square', 'diamond', 'lineH', 'circle'] },
+          { count: 16, kamikazes: 4, shapes: ['twoLines', 'veeDown', 'lineV', 'veeUp', 'twoLines'] }
         ]
       }
     };
 
-    // Filler enemy tracking
+    // Filler enemy tracking - only spawn after 4 morphs
     var lastFillerTime = 0;
-    var fillerCooldown = 1500; // 1.5 seconds between fillers
+    var fillerCooldown = 2000; // 2 seconds between fillers
+    var morphCount = 0; // Track how many times formation has morphed
+    var fillersAllowed = false; // Only true after 4 morphs
 
     function startWave(waveNum) {
       var levelData = LEVEL_WAVES[level];
@@ -1047,9 +1059,12 @@
       morphStartTime = Date.now();
       currentMorphShape = 0;
 
-      // Reset formation rotation for new wave
+      // Reset formation rotation and morph timing for new wave
       formationRotation = 0;
       targetFormationRotation = 0;
+      lastMorphTime = Date.now();
+      morphCount = 0;
+      fillersAllowed = false;
 
       var waveData = levelData.waves[waveNum - 1];
       waveEnemiesRemaining = waveData.count;
@@ -1061,21 +1076,36 @@
 
     function spawnMorphingFormation(waveData) {
       var count = waveData.count;
+      var kamikazeCount = waveData.kamikazes || 2;
       var centerX = canvas.width / 2;
       var targetY = 160;
       // Larger spread to prevent overlap (60px enemy + 20px gap minimum)
       var spreadRadius = 160;
 
+      // Get single enemy type for this level (all enemies in formation are the same)
+      var levelData = LEVEL_WAVES[level];
+      var enemyType = levelData.enemyType;
+
       // Get initial shape positions
       var shapeFunc = FORMATION_SHAPES[waveData.shapes[0]];
       var positions = shapeFunc(count);
+
+      // Randomly select which enemies will be kamikazes (pick from edges of formation)
+      var kamikazeIndices = [];
+      var availableIndices = [];
+      for (var k = 0; k < count; k++) availableIndices.push(k);
+      // Shuffle and pick kamikazes
+      for (var k = 0; k < kamikazeCount && availableIndices.length > 0; k++) {
+        var randIdx = Math.floor(Math.random() * availableIndices.length);
+        kamikazeIndices.push(availableIndices[randIdx]);
+        availableIndices.splice(randIdx, 1);
+      }
 
       for (var i = 0; i < count; i++) {
         (function(index, pos) {
           setTimeout(function() {
             if (gameOver) return;
 
-            var enemyType = waveData.enemyTypes[Math.floor(Math.random() * waveData.enemyTypes.length)];
             var width = 50;
             var height = 50;
 
@@ -1084,6 +1114,9 @@
               width = 35;
               height = 35;
             }
+
+            // Check if this enemy is a kamikaze
+            var isKamikaze = kamikazeIndices.indexOf(index) !== -1;
 
             var enemy = {
               x: centerX + pos.x * spreadRadius - width/2,
@@ -1104,13 +1137,16 @@
               spreadRadius: spreadRadius,
               centerX: centerX,
               centerY: targetY,
+              // Kamikaze properties
+              isKamikaze: isKamikaze,
+              kamikazeTriggered: false,
+              kamikazeTriggerMorph: isKamikaze ? (1 + Math.floor(Math.random() * 3)) : 0, // Break off after 1-3 morphs
               // For breathing effect - phase offset based on position
               breathPhase: index * 0.12,
-              // Morphing position tracking
+              // Morphing position tracking (start and current same initially)
+              startPos: { x: pos.x, y: pos.y },
               currentPos: { x: pos.x, y: pos.y },
-              targetPos: { x: pos.x, y: pos.y },
-              // Formation rotation angle
-              rotationAngle: 0
+              targetPos: { x: pos.x, y: pos.y }
             };
 
             enemies.push(enemy);
@@ -1122,6 +1158,12 @@
     // Track formation rotation for smooth transitions
     var formationRotation = 0;
     var targetFormationRotation = 0;
+    var lastMorphTime = 0; // Track when last morph started for easing
+
+    // Ease-in-out function for smooth, natural movement
+    function easeInOutCubic(t) {
+      return t < 0.5 ? 4 * t * t * t : 1 - Math.pow(-2 * t + 2, 3) / 2;
+    }
 
     function updateMorphingFormation(time) {
       // Check for morph every 8 beats (~4 seconds at 123 BPM)
@@ -1142,6 +1184,14 @@
       // If shape changed, update target positions and add rotation
       if (newShapeIndex !== currentMorphShape) {
         currentMorphShape = newShapeIndex;
+        morphCount++; // Track total morphs
+        lastMorphTime = time; // Record when this morph started
+
+        // Enable fillers after 4 morphs
+        if (morphCount >= 4 && !fillersAllowed) {
+          fillersAllowed = true;
+        }
+
         var shapeName = waveShapes[newShapeIndex];
         var shapeFunc = FORMATION_SHAPES[shapeName];
         var count = formationEnemies[0].formationCount;
@@ -1150,27 +1200,58 @@
         // Add rotation for visual interest (rotate 15-30 degrees on each morph)
         targetFormationRotation += (Math.PI / 12) + Math.random() * (Math.PI / 12);
 
-        // Update target positions for each enemy
+        // Store starting positions and update targets for smooth easing
+        // Also trigger kamikazes if it's their time
         formationEnemies.forEach(function(enemy, idx) {
           if (newPositions[idx]) {
+            // Save current position as start for easing
+            enemy.startPos = { x: enemy.currentPos.x, y: enemy.currentPos.y };
             enemy.targetPos = { x: newPositions[idx].x, y: newPositions[idx].y };
+          }
+
+          // Trigger kamikaze if it's their morph count
+          if (enemy.isKamikaze && !enemy.kamikazeTriggered && morphCount >= enemy.kamikazeTriggerMorph) {
+            enemy.kamikazeTriggered = true;
+            enemy.formation = false; // Leave formation
+            enemy.kamikaze = true; // Start kamikaze dive
+            enemy.kamikazeSpeed = 4 + Math.random() * 2; // Variable dive speed
+            // Calculate angle toward player
+            var dx = player.x + player.width / 2 - (enemy.x + enemy.width / 2);
+            var dy = player.y + player.height / 2 - (enemy.y + enemy.height / 2);
+            var dist = Math.sqrt(dx * dx + dy * dy);
+            enemy.kamikazeVelX = (dx / dist) * enemy.kamikazeSpeed;
+            enemy.kamikazeVelY = (dy / dist) * enemy.kamikazeSpeed;
           }
         });
       }
 
-      // Smoothly rotate formation toward target rotation
-      var rotationLerpSpeed = 0.03;
-      formationRotation += (targetFormationRotation - formationRotation) * rotationLerpSpeed;
+      // Calculate eased progress through current morph (use 60% of interval for transition)
+      var morphDuration = morphInterval * 0.6; // Take 60% of the time to morph, rest is hold
+      var timeSinceMorph = time - lastMorphTime;
+      var morphProgress = Math.min(timeSinceMorph / morphDuration, 1);
+      var easedProgress = easeInOutCubic(morphProgress);
 
-      // Lerp speed for position transitions
-      var lerpSpeed = 0.04;
+      // Smoothly rotate formation toward target rotation with easing
+      var rotationProgress = Math.min(timeSinceMorph / (morphDuration * 0.8), 1);
+      var easedRotation = easeInOutCubic(rotationProgress);
+      var targetRotationDelta = targetFormationRotation - formationRotation;
+      // Only apply eased rotation during active morph
+      if (rotationProgress < 1) {
+        formationRotation += targetRotationDelta * 0.03;
+      }
 
       formationEnemies.forEach(function(enemy) {
         if (!enemy.reachedTarget) return;
 
-        // Smoothly interpolate position
-        enemy.currentPos.x += (enemy.targetPos.x - enemy.currentPos.x) * lerpSpeed;
-        enemy.currentPos.y += (enemy.targetPos.y - enemy.currentPos.y) * lerpSpeed;
+        // Use eased interpolation for smooth, natural movement
+        if (enemy.startPos) {
+          enemy.currentPos.x = enemy.startPos.x + (enemy.targetPos.x - enemy.startPos.x) * easedProgress;
+          enemy.currentPos.y = enemy.startPos.y + (enemy.targetPos.y - enemy.startPos.y) * easedProgress;
+        } else {
+          // Fallback for first frame
+          enemy.currentPos.x = enemy.targetPos.x;
+          enemy.currentPos.y = enemy.targetPos.y;
+        }
 
         // Apply formation rotation to the position
         var rotatedX = enemy.currentPos.x * Math.cos(formationRotation) - enemy.currentPos.y * Math.sin(formationRotation);
@@ -1192,12 +1273,17 @@
     }
 
     function spawnFillerEnemy() {
+      // Only spawn fillers after 4 morphs to let player enjoy formations
+      if (!fillersAllowed) return;
+
       if (Date.now() - lastFillerTime < fillerCooldown) return;
       if (Math.random() > 0.25) return; // 25% chance each frame when cooldown is up
 
       lastFillerTime = Date.now();
 
-      var enemyType = getEnemyType();
+      // Use the same enemy type as the current level's formation
+      var levelData = LEVEL_WAVES[level];
+      var enemyType = levelData ? levelData.enemyType : getEnemyType();
       var width = 50;
       var height = 50;
 
@@ -1215,11 +1301,11 @@
         var spawnType = Math.random();
 
         if (spawnType < 0.5) {
-          // Side entry (left or right)
+          // Side entry (left or right) - upper half only, away from player
           var fromLeft = Math.random() < 0.5;
           enemy = {
             x: fromLeft ? -width : canvas.width,
-            y: 200 + Math.random() * 250, // Lower half to avoid formation
+            y: 100 + Math.random() * 150, // Upper half (100-250), halfway down canvas max
             width: width,
             height: height,
             baseWidth: width,
@@ -1789,11 +1875,11 @@
 
       var enemy;
       if (fromSide) {
-        // Side entry
+        // Side entry - upper half only, away from player
         var fromLeft = Math.random() < 0.5;
         enemy = {
           x: fromLeft ? -width : canvas.width,
-          y: 150 + Math.random() * 200,
+          y: 100 + Math.random() * 150, // Upper half (100-250)
           width: width,
           height: height,
           baseWidth: width,
@@ -2590,10 +2676,21 @@
 
             // Morphing formations are handled by updateMorphingFormation()
           } else {
-            // Regular non-formation enemies (fillers)
+            // Regular non-formation enemies (fillers and kamikazes)
 
+            // Kamikaze enemies dive toward player
+            if (enemy.kamikaze) {
+              enemy.x += enemy.kamikazeVelX;
+              enemy.y += enemy.kamikazeVelY;
+
+              // Remove if off screen
+              if (enemy.y > canvas.height || enemy.x < -enemy.width || enemy.x > canvas.width) {
+                enemies.splice(i, 1);
+                continue;
+              }
+            }
             // Side entry enemies move horizontally across screen
-            if (enemy.sideEntry) {
+            else if (enemy.sideEntry) {
               enemy.x += enemy.horizontalSpeed * enemy.horizontalDirection;
               enemy.y += 0.3; // Slight downward drift
 
@@ -2715,6 +2812,9 @@
         lastFillerTime = 0;
         formationRotation = 0;
         targetFormationRotation = 0;
+        lastMorphTime = 0;
+        morphCount = 0;
+        fillersAllowed = false;
 
         player.x = canvas.width / 2;
         enemies = [];
