--- a/index.html
+++ b/index.html
@@ -27,12 +27,19 @@
     }
 
     @media (max-width: 820px) {
+      body {
+        overflow: hidden;
+        background: #000;
+      }
       #container {
         width: 100vw;
+        height: 100vh;
+        overflow: hidden;
+        margin: 0;
       }
-      canvas {
-        width: 100vw !important;
-        height: auto !important;
+      /* UI overlays stay readable on mobile */
+      #score, #levelIndicator, #health {
+        font-size: 14px;
       }
     }
 
@@ -44,16 +51,6 @@
       font-size: 16px;
       z-index: 2;
       cursor: pointer;
-    }
-
-    #intro {
-      color: white;
-      position: absolute;
-      top: 10px;
-      left: 30%;
-      font-size: 18px;
-      z-index: 2;
-
     }
 
     #score {
@@ -210,7 +207,6 @@
   <div id="container">
 
     <button id="startButton">Start Game</button>
-    <div id="intro">Arrow Keys + Spacebar &nbsp;|&nbsp; Mobile: Touch &amp; Drag</div>
     <div id="score">Score: 0</div>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
     <div id="levelIndicator">Level: 1</div>
@@ -3146,6 +3142,36 @@
       if (e.key === "Right" || e.key === "ArrowRight") rightPressed = false;
       else if (e.key === "Left" || e.key === "ArrowLeft") leftPressed = false;
     });
+
+    // ============================================
+    // MOBILE CANVAS SCALING
+    // ============================================
+    function resizeCanvas() {
+      var isMobile = ('ontouchstart' in window) || window.innerWidth <= 820;
+      if (!isMobile) {
+        canvas.style.transform = '';
+        canvas.style.position = '';
+        canvas.style.left = '';
+        canvas.style.top = '';
+        return;
+      }
+      var vw = window.innerWidth;
+      var vh = window.innerHeight;
+      // Cover: fill entire viewport, center canvas, slight edge clipping if aspect differs
+      var scale = Math.max(vw / canvas.width, vh / canvas.height);
+      var scaledW = canvas.width * scale;
+      var scaledH = canvas.height * scale;
+      var offsetX = (vw - scaledW) / 2;
+      var offsetY = (vh - scaledH) / 2;
+      canvas.style.transformOrigin = '0 0';
+      canvas.style.transform = 'scale(' + scale + ')';
+      canvas.style.position = 'absolute';
+      canvas.style.left = offsetX + 'px';
+      canvas.style.top = offsetY + 'px';
+    }
+
+    resizeCanvas();
+    window.addEventListener('resize', resizeCanvas);
 
     // ============================================
     // TOUCH CONTROLS
