--- a/index.html
+++ b/index.html
@@ -51,23 +51,6 @@
       canvas {
         flex-shrink: 0;
       }
-      /* Start button: big and centered before game starts */
-      #startButton {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        font-size: 22px;
-        padding: 16px 40px;
-        z-index: 10;
-      }
-      #startButton.game-active {
-        top: 12px;
-        left: 12px;
-        transform: none;
-        font-size: 18px;
-        padding: 12px 24px;
-      }
       /* UI overlays readable on mobile */
       #score, #levelIndicator, #health {
         font-size: 14px;
@@ -82,6 +65,25 @@
       font-size: 16px;
       z-index: 2;
       cursor: pointer;
+    }
+
+    /* Mobile: center start button, move to corner once game is active */
+    @media (max-width: 820px) {
+      #startButton {
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 22px;
+        padding: 16px 40px;
+        z-index: 10;
+      }
+      #startButton.game-active {
+        top: 12px;
+        left: 12px;
+        transform: none;
+        font-size: 18px;
+        padding: 12px 24px;
+      }
     }
 
     #score {
@@ -3326,6 +3328,7 @@
         var jRadius = 55;
         var jy = player.y + player.height + jRadius;
         ctx.save();
+        // Grey base circle
         ctx.beginPath();
         ctx.arc(jx, jy, jRadius, 0, Math.PI * 2);
         ctx.fillStyle = 'rgba(200, 200, 200, 0.45)';
