--- a/index.html
+++ b/index.html
@@ -10,48 +10,25 @@
       margin: 0;
       padding: 0;
       overflow: hidden;
+      background: #000;
       font-family: Arial, sans-serif;
     }
 
     #container {
       position: relative;
-      width: 800px;
-      margin: 0 auto;
+      width: 100vw;
+      height: 100vh;
+      overflow: hidden;
     }
 
     canvas {
-      border: 1px solid black;
+      position: absolute;
       display: block;
       background-color: rgb(0, 0, 0);
       touch-action: none;
     }
 
     @media (max-width: 820px) {
-      body {
-        overflow: hidden;
-        background: #000;
-        margin: 0;
-        padding: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100vw;
-        height: 100vh;
-      }
-      #container {
-        position: relative;
-        width: 100vw;
-        height: 100vh;
-        overflow: hidden;
-        margin: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-      canvas {
-        flex-shrink: 0;
-      }
-      /* UI overlays readable on mobile */
       #score, #levelIndicator, #health {
         font-size: 14px;
       }
@@ -191,6 +168,8 @@
       color: #FF3333;
       text-shadow: 0 0 10px #FF0000, 0 0 20px #FF0000;
       z-index: 3;
+      text-align: center;
+      line-height: 1.5;
       animation: warningPulse 0.5s ease-in-out infinite;
     }
 
@@ -247,7 +226,7 @@
     <div id="levelDisplay">Level 1</div>
     <div id="powerupDisplay"></div>
     <div id="bonusDisplay"></div>
-    <div id="warningDisplay">Warning! Shielded Enemy!</div>
+    <div id="warningDisplay">Warning!<br>Shielded Enemy!</div>
     <div id="pauseDisplay">PAUSED</div>
     <div id="victory">Thank you for playing!<br><br>Special thanks to Modmotif for the music.<br><br>Please submit your
       email to download the song for remix.<br><br>&copy; 2026</div>
@@ -490,7 +469,7 @@
     var isMobile = ('ontouchstart' in window) || window.innerWidth <= 820;
     var player = {
       x: canvas.width / 2,
-      y: isMobile ? canvas.height - 200 : canvas.height - 80,
+      y: canvas.height - 200,
       width: 75,
       height: 75
     };
@@ -804,6 +783,8 @@
 
     function collectPowerup(powerup) {
       playSound('powerUp');
+      score += 5;
+      updateUI();
       if (powerup.type === POWERUP_TYPES.HEALTH) {
         health = Math.min(health + CONFIG.healthPowerupAmount, CONFIG.maxHealth);
         updateUI();
@@ -2623,6 +2604,10 @@
             score += 10;
             updateUI();
             playSound('enemyDead');
+            // Minion kill chips boss for 1 HP
+            if (boss && !boss.shielded) {
+              boss.health = Math.max(0, boss.health - 1);
+            }
             break;
           }
         }
@@ -2773,20 +2758,55 @@
         ctx.drawImage(bossImage, boss.x, boss.y, boss.width, boss.height);
       }
 
-      // Draw health bar (always visible)
+      // Boss health bar - fixed at top of canvas
       var healthPercent = boss.health / boss.maxHealth;
-      ctx.fillStyle = "#333";
-      ctx.fillRect(boss.x, boss.y - 15, boss.width, 10);
-      ctx.fillStyle = healthPercent > 0.3 ? "#00FF00" : "#FF0000";
-      ctx.fillRect(boss.x, boss.y - 15, boss.width * healthPercent, 10);
+      var barW = 400;
+      var barH = 14;
+      var barX = (canvas.width - barW) / 2;
+      var barY = 22;
+      var bossColor = currentBoss === 3 ? '#CC55FF' : currentBoss === 2 ? '#FF4444' : '#4499FF';
+
+      // Dark panel behind bar
+      ctx.fillStyle = 'rgba(0, 0, 0, 0.65)';
+      ctx.fillRect(barX - 10, barY - 20, barW + 20, barH + 28);
+
+      // Boss label
+      var bossLabel = currentBoss === 1 ? 'BOSS I' : currentBoss === 2 ? 'BOSS II' : 'BOSS III';
+      ctx.fillStyle = bossColor;
+      ctx.font = 'bold 11px Arial';
+      ctx.textAlign = 'center';
+      ctx.fillText(bossLabel, canvas.width / 2, barY - 6);
+
+      // Bar background
+      ctx.fillStyle = '#1a1a1a';
+      ctx.fillRect(barX, barY, barW, barH);
+
+      // Bar fill — orange at 50%, pulsing red at 25%
+      var fillColor = bossColor;
+      if (healthPercent < 0.25) {
+        fillColor = (Math.sin(Date.now() / 120) > 0) ? '#FF2222' : '#FF7777';
+      } else if (healthPercent < 0.5) {
+        fillColor = '#FF8800';
+      }
+      ctx.fillStyle = fillColor;
+      ctx.fillRect(barX, barY, barW * healthPercent, barH);
+
+      // Border
+      ctx.strokeStyle = bossColor;
+      ctx.lineWidth = 1.5;
+      ctx.strokeRect(barX, barY, barW, barH);
+      ctx.textAlign = 'left';
     }
 
     function damageBoss() {
       if (!boss) return;
 
-      // Check if boss is shielded
+      // Check if boss is shielded — chip damage still gets through
       if (boss.shielded) {
-        return; // No damage when shielded
+        boss.health -= 0.5;
+        bossBlinking = true;
+        bossBlinkTimer = 6;
+        return;
       }
 
       boss.health--;
@@ -3183,18 +3203,16 @@
     // MOBILE CANVAS SCALING
     // ============================================
     function resizeCanvas() {
-      var isMobile = ('ontouchstart' in window) || window.innerWidth <= 820;
-      if (!isMobile) {
-        canvas.style.transform = '';
-        canvas.style.transformOrigin = '';
-        return;
-      }
       var vw = window.innerWidth;
       var vh = window.innerHeight;
-      // Contain: fit entire canvas on screen so nothing is clipped
-      var scale = Math.min(vw / canvas.width, vh / canvas.height);
-      canvas.style.transformOrigin = 'center center';
+      var isMob = ('ontouchstart' in window) || vw <= 820;
+      var scale = isMob ? Math.min(vw / canvas.width, vh / canvas.height) : 1;
+      var scaledW = canvas.width * scale;
+      var scaledH = canvas.height * scale;
+      canvas.style.transformOrigin = '0 0';
       canvas.style.transform = 'scale(' + scale + ')';
+      canvas.style.left = Math.round((vw - scaledW) / 2) + 'px';
+      canvas.style.top  = Math.round((vh - scaledH) / 2) + 'px';
     }
 
     resizeCanvas();
@@ -3835,7 +3853,7 @@
         shieldRegenTime = 0;
 
         player.x = canvas.width / 2;
-        player.y = (('ontouchstart' in window) || window.innerWidth <= 820) ? canvas.height - 200 : canvas.height - 80;
+        player.y = canvas.height - 200;
         enemies = [];
         playerBullets = [];
         enemyBullets = [];
