--- a/index.html
+++ b/index.html
@@ -3207,12 +3207,13 @@
       var vh = window.innerHeight;
       var isMob = ('ontouchstart' in window) || vw <= 820;
       var scale = isMob ? Math.min(vw / canvas.width, vh / canvas.height) : 1;
-      var scaledW = canvas.width * scale;
-      var scaledH = canvas.height * scale;
-      canvas.style.transformOrigin = '0 0';
-      canvas.style.transform = 'scale(' + scale + ')';
-      canvas.style.left = Math.round((vw - scaledW) / 2) + 'px';
-      canvas.style.top  = Math.round((vh - scaledH) / 2) + 'px';
+      var displayW = Math.round(canvas.width * scale);
+      var displayH = Math.round(canvas.height * scale);
+      canvas.style.width  = displayW + 'px';
+      canvas.style.height = displayH + 'px';
+      canvas.style.transform = '';
+      canvas.style.left = Math.round((vw - displayW) / 2) + 'px';
+      canvas.style.top  = Math.round((vh - displayH) / 2) + 'px';
     }
 
     resizeCanvas();
