Prevent pull-to-refresh and swipe-to-naviagte on all pages

--- a/game.html
+++ b/game.html
@@ -12,6 +12,11 @@
       box-sizing: border-box;
     }
 
+    html, body {
+      overscroll-behavior: none;
+      touch-action: none;
+    }
+
     body {
       margin: 0;
       padding: 0;
