--- a/game_mobile.html
+++ b/game_mobile.html
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Top-Scrolling Flying Game - Mobile</title>
   <style>
+    html, body {
+      overscroll-behavior: none;
+      touch-action: none;
+    }
+
     body {
       margin: 0;
       padding: 0;
