--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <style>
     *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
 
+    html, body {
+      overscroll-behavior: none;
+      touch-action: none;
+    }
+
     body {
       background: #000;
       color: #fff;
