UI Polish: Center powerup notifications and prevent wrapping

--- a/game_mobile.html
+++ b/game_mobile.html
@@ -286,6 +286,8 @@
       color: #FFD700;
       text-shadow: 0 0 15px #FFD700;
       z-index: 3;
+      white-space: nowrap;
+      text-align: center;
     }
 
     #bonusDisplay {
